# momo

./: .clang-format  .gitignore  .gitmodules  .markdownlint.jsonc  AGENTS.md  BUILD.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  DEPS  DEV.md  LICENSE  LLMs.md  Makefile  NOTICE  README.en.md  README.md  THANKS  TODO.md  USE.md  VERSION  buildbase.py  canary.py  cmake.bat  cmake.ps1  format.sh  run.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: ------.md  bug-report.md  bug_report.md  config.yml
.github/workflows/: build.yml  claude.yml  codeql-analysis.yml  daily_build.yml  e2e-test-only.yml  e2e-test.yml
NvCodec/Utils/: Logger.h  NvCodecUtils.h
NvCodec/include/: cuviddec.h  nvEncodeAPI.h  nvcuvid.h
cmake/: FindBlend2D.cmake  FindCLI11.cmake  FindJSON.cmake  FindLIBVA.cmake  FindLibdrm.cmake  FindLibva.cmake  FindMSDK.cmake  FindNvCodec.cmake  FindWebRTC.cmake
doc/: BUILD.md  BUILD_LINUX.md  BUILD_LINUX_LOCAL.md  BUILD_MACOS.md  BUILD_WINDOWS.md  BUY_JETSON.md  BUY_JETSON_NANO.md  CACHE.md  DEV.md  FAQ.md  INTEL_MEDIA_SDK.md  INTEL_VPL_YUY2.md  INTEL_VPL_YUY2_H265.md  LIBCAMERA.md  LINUX_AUDIO_DEVICE.md  LINUX_DEVICE.md  LINUX_PIPEWIRE.md  LINUX_VIDEO_DEVICE.md  PACKAGE.md  PATCH_WEBRTC.md  QA.md  SETUP_JETSON.md  SETUP_JETSON_NANO.md  SETUP_LINUX.md  SETUP_MAC.md  SETUP_RASPBERRY_PI.md  SETUP_UBUNTU.md  SETUP_WINDOWS.md  TIPS.md  USE.md  USE_ARM_ROS.md  USE_AYAME.md  USE_JETSON_NANO.en.md  USE_JETSON_NANO.md  USE_MAC.md  USE_METRICS.md  USE_P2P.md  USE_RASPBERRY_PI.md  USE_ROS.md  USE_SDL.md  (+7 more)
e2e-test/: .env.template  README.md  conftest.py  momo.py  pyproject.toml  test_metrics_api.py  test_momo.py  test_momo_context.py  test_momo_flexible.py  test_momo_validation.py  test_p2p_mode.py  test_sora.py  test_sora_mode.py
html/: ayame.html  p2p.html  p2p.js  test.html  webrtc.js
html/assets/: ayame.js
hwenc_il/: il_encoder_factory.cpp  il_encoder_factory.h  il_h264_encoder.cpp  il_h264_encoder.h
localbuild/: build.raspberry-pi-os_armv7.sh  build.ubuntu-20.04_x86_64.sh
multistrap/: raspberry-pi-os_armv8.conf  ubuntu-20.04_armv8_jetson_xavier.conf  ubuntu-22.04_armv8_jetson.conf
patch/: 4k.patch  arm64.conf  civetweb_signal.patch  ffmpeg_armv6.patch  mac_sdl.patch  macos_h264_encoder.patch  msdk_limits.patch  nacl_armv6.patch  nacl_armv6_1.patch  nacl_armv6_2.patch  nacl_armv7_ros.patch  project-config-arm_gcc.jam  project-config-raspbian.jam  project-config-rpi-xenial.jam  project-config-ubuntu-x86_64.jam  project-config-ubuntu-x86_64_gcc.jam  project-config.jam  rpi-raspbian.conf  rpi-xenial-ros.conf
script/: apt_install_arm.sh  apt_install_x86_64.sh  docker.sh  docker_run.sh  get_cmake.sh  get_llvm.sh  get_webrtc.sh  init_rootfs_arm64.sh  init_rootfs_armhf.sh  setup_boost.sh  setup_sdl2.sh  setup_sdl2_image.sh  with_versions.sh
src/: connection_settings.h  device_info.cpp  device_info.h  fix_cuda_noinline_macro_error.h  main.cpp  momo_args.h  momo_version.cpp  momo_version.gen.h.template  momo_version.h  signal_listener.cpp  signal_listener.h  ssl_verifier.cpp  ssl_verifier.h  url_parts.h  util.cpp  util.h  video_codec_info.h  watchdog.cpp  watchdog.h  websocket.cpp  websocket.h  zlib_helper.h
src/ayame/: ayame_client.cpp  ayame_client.h  ayame_server.cpp  ayame_server.h  ayame_websocket_client.cpp  ayame_websocket_client.h
src/cuda/: cuda_context.h  cuda_context_cuda.cpp  cuda_context_cuda.h
src/dyn/: cuda.h  dyn.h  nvcuvid.h
src/hwenc/: README.md
src/hwenc_amf/: amf_context.h  amf_context_impl.cpp  amf_context_impl.h  amf_video_decoder.cpp  amf_video_decoder.h  amf_video_encoder.cpp  amf_video_encoder.h
src/hwenc_il/: il_encoder_factory.h  il_h264_encoder.cpp  il_h264_encoder.h
src/hwenc_jetson/: jetson_buffer.cpp  jetson_buffer.h  jetson_h264_encoder.cpp  jetson_h264_encoder.h  jetson_jpeg_decoder.cpp  jetson_jpeg_decoder.h  jetson_jpeg_decoder_pool.cpp  jetson_jpeg_decoder_pool.h  jetson_v4l2_capturer.cpp  jetson_v4l2_capturer.h  jetson_video_decoder.cpp  jetson_video_decoder.h  jetson_video_encoder.cpp  jetson_video_encoder.h
src/hwenc_mmal/: mmal_buffer.cpp  mmal_buffer.h  mmal_h264_decoder.cpp  mmal_h264_decoder.h  mmal_h264_encoder.cpp  mmal_h264_encoder.h  mmal_v4l2_capture.cpp  mmal_v4l2_capture.h  mmal_v4l2_capturer.cpp  mmal_v4l2_capturer.h  v4l2_mmal_capturer.cpp  v4l2_mmal_capturer.h
src/hwenc_msdk/: msdk_session.cpp  msdk_session.h  msdk_utils.h  msdk_video_decoder.cpp  msdk_video_decoder.h  msdk_video_encoder.cpp  msdk_video_encoder.h  vaapi_utils.cpp  vaapi_utils.h  vaapi_utils_drm.cpp  vaapi_utils_drm.h
src/hwenc_nvcodec/: nvcodec_decoder_cuda.cpp  nvcodec_decoder_cuda.h  nvcodec_h264_encoder.cpp  nvcodec_h264_encoder.h  nvcodec_h264_encoder_cuda.cpp  nvcodec_h264_encoder_cuda.h  nvcodec_mjpeg_decoder_cuda.cpp  nvcodec_mjpeg_decoder_cuda.h  nvcodec_v4l2_capturer.cpp  nvcodec_v4l2_capturer.h  nvcodec_video_decoder.cpp  nvcodec_video_decoder.h
src/hwenc_v4l2/: libcamera_capturer.cpp  libcamera_capturer.h  v4l2_buffers.cpp  v4l2_buffers.h  v4l2_capturer.cpp  v4l2_capturer.h  v4l2_converter.cpp  v4l2_converter.h  v4l2_h264_decoder.cpp  v4l2_h264_decoder.h  v4l2_h264_encoder.cpp  v4l2_h264_encoder.h  v4l2_native_buffer.cpp  v4l2_native_buffer.h  v4l2_runner.cpp  v4l2_runner.h
src/hwenc_vpl/: vaapi_utils.h  vpl_session.cpp  vpl_session.h  vpl_utils.h  vpl_video_decoder.cpp  vpl_video_decoder.h  vpl_video_encoder.cpp  vpl_video_encoder.h
src/libcamerac/: libcamerac.cpp  libcamerac.h
src/mac_helper/: mac_capturer.h  mac_capturer.mm  macos_version.h  (+3 more)
test/: .env.template  .gitignore  README.md  conftest.py  momo.py  momo_sora.py  pyproject.toml  test_ayame_mode.py  test_metrics_api.py  test_momo.py  test_momo_validation.py  test_p2p_mode.py  test_sora_mode.py  test_sora_mode_amd_amf.py  test_sora_mode_apple_video_toolbox.py  test_sora_mode_intel_vpl.py  test_sora_mode_nv12.py  test_sora_mode_nvidia_video_codec.py  test_sora_mode_nvidia_video_codec_sdk.py  test_sora_mode_openh264.py  test_sora_mode_raspberry_pi.py  test_sora_mode_sendonly_recvonly.py  test_sora_mode_sendrecv.py  test_sora_mode_simulcast.py
(+226 files in other folders)
